documento general y mejoras internas

--- a/extra-addons/sga2/views/apache2.xml
+++ b/extra-addons/sga2/views/apache2.xml
@@ -59,9 +59,9 @@
           </group>
           <notebook>
             <page string="Resultados">
-              <field name="aps" widget="gauge"></field>
-              <field name="apache" widget="gauge"></field>
-              <field name="mortalidad" widget="gauge"></field>
+              <field name="aps"> </field>
+              <field name="apache"> </field>
+              <field name="mortalidad"> </field>
             </page>
           </notebook>
         </sheet>
