validación de campos de entradas y evalución general

--- a/extra-addons/reporte_admision_uci/reports/reporte_admision.xml
+++ b/extra-addons/reporte_admision_uci/reports/reporte_admision.xml
@@ -4,7 +4,7 @@
 		id="accion_admision_admision_report" 
 		string="Reporte de admision" 
 		model="admision.admision" 
-		report_type="qweb-pdf" 
+		report_type="qweb-html" 
 		name="reporte_admision_uci.reporte_admision">
 	</report>
 
