--- a/extra-addons/sga2/views/apache2.xml
+++ b/extra-addons/sga2/views/apache2.xml
@@ -121,9 +121,105 @@
     </field>
   </record>
 
+<!-- Kanban views -->
+  <record id="apache_kanban_view" model="ir.ui.view">
+    <field name="name">Vista kanban</field>
+    <field name="model">apache.apache</field>
+    <field name="arch" type="xml">
+      <kanban class="o_kanban_small_column">
+        <field name="color"></field>
+
+        <field name="fecha_actual"></field>
+        <field name="paciente_admitido"></field>
+        <field name="aps"></field>
+        <field name="apache"></field>
+        <field name="mortalidad"></field>
+        
+        <templates>
+          <t t-name="kanban-box">
+            <!-- Set the Kanban card color: -->
+            <div t-attf-class="#{kanban_color(record.color.raw_value)} oe_kanban_global_click">
+
+              <div class="o_dropdown_kanban dropdown">
+                <!-- Top-right drop down menu here -->
+                <a class="dropdown-toggle btn" data-toggle="dropdown">
+                  <span class="fa fa-bars fa-lg"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                  
+                  <t t-if="widget.editable">
+                    <li><a type="edit">Editar</a></li>
+                  </t>
+
+                  <t t-if="widget.deletable">
+                    <li><a type="delete">Eliminar</a></li>
+                  </t>
+
+                  <li>
+                    <ul class="oe_kanban_colorpicker" data-field="color"></ul>
+                  </li>
+                  
+                </ul>
+              </div>
+
+              <div class="oe_kanban_content">
+                
+                <div>
+                  <label for="paciente_admitido">Paciente: </label>
+                  
+                    <field name="paciente_admitido"></field>
+                  
+                </div>
+
+                <div>
+                    <label for="fecha_actual">Fecha de cálculo: </label>
+                    <field name="fecha_actual"></field>
+                  
+                </div>
+
+                <div>
+                    <label for="aps">APS: </label>
+                    <field name="aps"></field>
+                  
+                </div>
+
+                <div>
+                    <label for="apache">APACHE II: </label>
+                    <field name="apache"></field>
+                  
+                </div>
+
+                <div>
+                    <label for="mortalidad">Mortalidad: </label>
+                    <field name="mortalidad"></field>
+                  
+                </div>
+                
+               
+
+                <div class="oe_kanban_footer">
+                  <div><!-- LEft hand footer-->
+                    
+                  </div>
+
+                  <div><!-- Right hand footer-->
+                  
+                  </div>
+
+                </div>
+              </div> <!--oe_kanban_content -->
+
+              <div class="oe_clear"></div>
+            </div> <!--kanban color -->
+              
+          </t>
+        </templates>
+      </kanban>
+    </field>
+
+  </record>
   
-
-
+ 
   <!-- Menú -->
   <menuitem id="apache_menu_root" 
     name="APACHE II" 
